Robusting the app