@@ -2,10 +2,12 @@ package com.prenotapp._service.impl;
 
 import java.util.Comparator;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import com.prenotapp._dto.ShopDTO;
 import com.prenotapp._model.Category;
@@ -15,6 +17,7 @@ import com.prenotapp._repo.ICategoryRepo;
 import com.prenotapp._repo.IShopCategoryRepo;
 import com.prenotapp._repo.IShopRepo;
 import com.prenotapp._service.IShopService;
+import com.prenotapp.exception.ModelNotFoundException;
 
 import lombok.NonNull;
 
@@ -34,73 +37,104 @@ public class ShopServiceImpl implements IShopService {
   @Autowired
   private ModelMapper mapper;
 
-  protected IShopRepo getRepo() {
-    return shopRepo;
-  }
-
   @Override
+  @Transactional(readOnly = true)
   public List<ShopDTO> list() {
     return shopRepo
       .findAll()
       .stream()
       .map(this::toDTO)
       .sorted(Comparator.comparing(ShopDTO::getId))
-      .toList();
+      .collect(Collectors.toList());
   }
 
   @Override
+  @Transactional(readOnly = true)
   public ShopDTO findById(@NonNull Long id) {
-    return toDTO(shopRepo.findById(id).get());
+    return shopRepo
+      .findById(id)
+      .map(this::toDTO)
+      .orElseThrow(() ->
+        new ModelNotFoundException("Shop not found with ID: " + id)
+      );
   }
 
   @Override
-  public ShopDTO addCategoryToShop(
-    @NonNull Long idShop,
-    @NonNull Long idCategory
-  ) {
-    Shop shop = shopRepo.findById(idShop).get();
-    Category category = categoryRepo.findById(idCategory).get();
-    shop.getCategories().add(category);
-    return toDTO(shopRepo.save(shop));
-  }
-
-  @Override
-  public void removeCategoryFromShop(
-    @NonNull Long idShop,
-    @NonNull Long idCategory
-  ) {
-    Shop shop = shopRepo.findById(idShop).get();
-    Category category = categoryRepo.findById(idCategory).get();
-    shop.getCategories().remove(category);
-    ShopCategory shopCategory = shopCategoryRepo.findByShopAndCategory(
-      shop,
-      category
-    );
-    if (shopCategory != null) shopCategoryRepo.delete(shopCategory);
-    shopRepo.save(shop);
-  }
-
-  
-  @Override
+  @Transactional
   public ShopDTO register(@NonNull ShopDTO shopDTO) throws Exception {
     return toDTO(shopRepo.save(toEntity(shopDTO)));
   }
 
   @Override
+  @Transactional
   public ShopDTO update(@NonNull ShopDTO shopDTO) throws Exception {
     return toDTO(shopRepo.save(toEntity(shopDTO)));
   }
 
   @Override
+  @Transactional
   public void delete(@NonNull Long id) throws Exception {
     shopRepo.deleteById(id);
   }
 
-  public ShopDTO toDTO(Shop shop) {
+  @Override
+  @Transactional
+  public ShopDTO addCategoryToShop(
+    @NonNull Long idShop,
+    @NonNull Long idCategory
+  ) {
+    Shop shop = shopRepo
+      .findById(idShop)
+      .orElseThrow(() ->
+        new ModelNotFoundException("Shop not found with ID: " + idShop)
+      );
+    Category category = categoryRepo
+      .findById(idCategory)
+      .orElseThrow(() ->
+        new ModelNotFoundException("Category not found with ID: " + idCategory)
+      );
+    shop.getCategories().add(category);
+    Shop savedShop = shopRepo.save(shop);
+    return toDTO(savedShop);
+  }
+
+  @Override
+  @Transactional
+  public void removeCategoryFromShop(
+    @NonNull Long idShop,
+    @NonNull Long idCategory
+  ) {
+    Shop shop = shopRepo
+      .findById(idShop)
+      .orElseThrow(() ->
+        new IllegalArgumentException("Shop not found with ID: " + idShop)
+      );
+    Category category = categoryRepo
+      .findById(idCategory)
+      .orElseThrow(() ->
+        new IllegalArgumentException(
+          "Category not found with ID: " + idCategory
+        )
+      );
+
+    if (shop.getCategories().remove(category)) {
+      shopRepo.save(shop);
+
+      ShopCategory shopCategory = shopCategoryRepo.findByShopAndCategory(
+        shop,
+        category
+      );
+      if (shopCategory != null) {
+        shopCategoryRepo.delete(shopCategory);
+      }
+    }
+  }
+
+  private ShopDTO toDTO(Shop shop) {
     return mapper.map(shop, ShopDTO.class);
   }
 
-  public Shop toEntity(ShopDTO shopDTO) {
+  private Shop toEntity(ShopDTO shopDTO) {
     return mapper.map(shopDTO, Shop.class);
   }
 }
